--- a/views/adviser_case_p.html
+++ b/views/adviser_case_p.html
@@ -380,7 +380,7 @@
         $(this).find(".circle").hide();
         if($(this).index() == 3){
           $(".report-txt").show();
-          $(".layui-layer-content").css({"height":"115px"});
+          $(".report-con").parent().css({"height":"115px"});
           if($('.report-txt').val()!= ''){
             report_content = $('.report-txt').val();
           }else{
@@ -388,7 +388,7 @@
           }
         }else{
           $(".report-txt").hide();
-          $(".layui-layer-content").css({"height":"39px"});
+          $(".report-con").parent().css({"height":"39px"});
           report_content = $(this).find('.sp-con').text();
         }
       });
