修改顾问简介

--- a/views/widget2/community_advisor/community_advisor.css
+++ b/views/widget2/community_advisor/community_advisor.css
@@ -110,9 +110,15 @@
 }
 .community-advisor .counsellor-intro p{
   line-height: 24px;
+  word-wrap:break-word; 
+  word-break:break-all; 
+  overflow: hidden;
 }
 .community-advisor .advisor-intro p{
   line-height: 24px;
+  word-wrap:break-word; 
+  word-break:break-all; 
+  overflow: hidden;
 }
 .community-advisor .advisor-btn{
   height: 40px;
