--- a/views/about/cooperation.html
+++ b/views/about/cooperation.html
@@ -343,7 +343,7 @@
 
       if(!baomingfaangshi.email($.trim($("#quickPhone4").val()))){
         //判断手机号
-        $('#phoneNumTip4').html("输入您的电子邮箱");
+        $('#phoneNumTip4').html("输入正确的电子邮箱");
         return false;
       }else{
         $('#phoneNumTip4').html('');
