--- a/public/assets/css/search_result.css
+++ b/public/assets/css/search_result.css
@@ -164,10 +164,12 @@
     color: #333;
 }
 .page-search-type input[type="radio"] {
-    visibility: hidden;
+    /*visibility: hidden;*/
+    position: absolute;
+    top: -999px;
+    left: -999px;
 }
-.page-search-type input[type="radio"] + label:before {
-    content: "";
+.page-search-type input[type="radio"] + span {
     display: inline-block;
     vertical-align: middle;
     width: 16px;
@@ -176,22 +178,33 @@
     border-radius: 50%;
     border: 1px solid #333;
     color: #333;
-    margin-top: -2px;
+    position: relative;
+    margin-top: -3px;
 }
-.page-search-type input[type="radio"]:checked + label {
+.page-search-type input[type="radio"].checked + label {
     color: #c13232;
 }
-.page-search-type input[type="radio"]:checked + label:before {
-    content: "";
+.page-search-type input[type="radio"].checked + span {
     display: inline-block;
     vertical-align: middle;
-    width: 12px;
-    height: 12px;
-    margin-right: 10px;
+    width: 16px;
+    height: 16px;
+    margin-rigt: 10px;
     border-radius: 50%;
     border: 1px solid #c13232;
-    background-color: #c13232;
-    background-clip: content-box;
-    padding: 2px;
     color: #c13232;
+}
+.page-search-type input[type="radio"].checked + span i{
+    position: absolute;
+    left: 2px;
+    top: 2px;
+    width: 12px;
+    height: 12px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    background-color: transparent;
+}
+.page-search-type input[type="radio"].checked + span i{
+    background-color: #c13232;
 }
