修改文章水印

--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -301,7 +301,7 @@
     function watermark() {
       var oTemp = document.createDocumentFragment();
       var mask_div = document.createElement('div');
-      mask_div.appendChild(document.createTextNode('文章来源自金吉列 www.jjl.cn 400-010-8000'));
+      mask_div.appendChild(document.createTextNode('金吉列 www.jjl.cn 400-010-8000'));
       //设置水印div倾斜显示
       mask_div.style.webkitTransform = "rotate(-" + 30 + "deg)";
       mask_div.style.MozTransform = "rotate(-" + 30 + "deg)";
