--- a/views/login/loginUser.html
+++ b/views/login/loginUser.html
@@ -2,6 +2,7 @@
 <html>
 {% include "header_new.html" %}
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/nav_login.css"/>
+  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/custom.css"/>
   <script src="{{helper.cdnhost}}/assets/js/bootstrap.min.js?v=3.3.6"></script>
   <script src="{{helper.cdnhost}}/assets/js/Bootstrap_popover.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/icheck.min.js"></script>
