--- a/views/widget/online_evaluation/online_evaluation.html
+++ b/views/widget/online_evaluation/online_evaluation.html
@@ -44,9 +44,9 @@
 					</div>
 
 						<div class="leaveField clearfix">
-						<div class="title">意向国家：</div>
+						<div class="title" style="width: 120px;">意向国家和地区：</div>
 						<div class="text1">
-							<select id="department" name="department" >
+							<select id="department" name="department" style="width: 124px;background: url({{helper.cdnhost}}/assets/img/select-down.png) no-repeat 105px 0">
 								<option value='1'>美国</option>
 								<option value='2'>英国</option>
 								<option value='3'>加拿大</option>
