--- a/views/widget/online_evaluation/online_evaluation.html
+++ b/views/widget/online_evaluation/online_evaluation.html
@@ -46,7 +46,7 @@
 						<div class="leaveField clearfix">
 						<div class="title" style="width: 120px;">意向国家和地区：</div>
 						<div class="text1">
-							<select id="department" name="department" style="width: 124px;background: url({{helper.cdnhost}}/assets/img/select-down.png) no-repeat 105px 0">
+							<select id="department" name="department" class="department">
 								<option value='1'>美国</option>
 								<option value='2'>英国</option>
 								<option value='3'>加拿大</option>
