修改举报问题

--- a/views/adviser_special.html
+++ b/views/adviser_special.html
@@ -207,6 +207,7 @@
       }
       $('.right-main').append(favHtml);
       window._bd_share_main.init();
+      $('.report-btn').unbind('click');
       $('.report-btn').on("click",report); //点击举报
     }
     function addArticleImg (imgList) {
