--- a/views/adviser_hot.html
+++ b/views/adviser_hot.html
@@ -210,6 +210,7 @@
       }
 
       $('.right-main').append(favHtml);
+      $('.report-btn').unbind('click');
       $('.report-btn').on("click", report); //点击举报
       window._bd_share_main.init();
     }
