--- a/views/case_detail.html
+++ b/views/case_detail.html
@@ -100,7 +100,7 @@
             收藏<i id="collection-num">{{article.article_info.favorites}}</i>
           </span>
           <span style="float:right;margin-left: 20px;">
-            阅读<i style="font-style: normal;" id="detail_views_num">{{article.article_info.views}}</i>
+            阅读<i style="font-style: normal;" id="detail_views_num" data-viesNum="{{article.article_info.views}}"></i>
           </span>
         </div>
         <div class="adviser-case-detail-offer" data-img="{{article.article_info.img_info[0]}}" id="get-share-img">
