--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -1,10 +1,11 @@
 <style type="text/css">
 .lxContaniner{margin-top:30px;width:1200px;overflow: hidden;margin-left: auto;margin-right: auto;}
 .lx-head{margin-bottom:20px;padding-bottom:10px;height:27px;border-bottom:solid 1px #dcdcdc;overflow: hidden;}
-.lx-head h1{float:left;margin-right:35px;color:#333;font-size:22px}
+.lx-head h1{float:left;margin-right:80px;color:#333;font-size:22px}
 .lx-tabitems{float:left;margin-top:5px}
-.lx-tabitems li{position:relative;float:left;color:#666;margin-right:12px;text-align:center;font-size:14px;cursor:pointer}
-.lx-tabitems li.active{color:#c13232}
+.lx-tabitems li{position:relative;float:left;color:#666;margin-right:14px;text-align:center;font-size:12px;cursor:pointer}
+.lx-tabitems li.active{color:#c13232;font-size: 14px;}
+.lx-tabitems li:first-child{margin-right: 25px;}
 .lx-tabitems li.active em{position:absolute;bottom:-14px;left:0;display:block;width:100%;height:2px;background:#c13232}
 .gw-items li{float:left;margin-right:20px;margin-bottom:10px;padding-bottom:14px;width:385px;*width:380px;width:380px\0;border-bottom:solid 1px #dcdcdc}
 .gw-topitems{position:relative;overflow:hidden;margin-bottom:20px;box-shadow:0 3px 5px #e2e5e6;background:#f1f4f6;}
@@ -34,8 +35,8 @@
 .lx-head a{ font-size: 12px;color: #c13232;float: left;margin-top: 5px}
 .lx-head .enter{ font-size: 12px;color: #c13232;float: right;margin-top: 5px}
 .lx-hovertarg{ float: left;font-size: 0; }
-.lx-hovertarg li{ display: inline-block; margin-right: 8px; *float: left}
-.lx-hovertarg li a{font-size: 12px;color: #999;width: 60px;	transition: .2s ease;-webkit-transition: .2s ease;}
+.lx-hovertarg li{ display: inline-block; margin-right: 14px; *float: left}
+.lx-hovertarg li a{font-size: 12px;color: #999;	transition: .2s ease;-webkit-transition: .2s ease;}
 .lx-hovertarg li a:hover{
 	color: #c13232;
 	font-weight: bold;
