--- a/views/about/lawyer.html
+++ b/views/about/lawyer.html
@@ -122,7 +122,7 @@
 
 {% include "widget/new_footer/yimin_footer.html" %}
 {% import "widget/new_slide_yimin/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_COUNSELLER_SEAT10",helper) }}
+{{slide.leyu_slide(helper) }}
 </body>
 <script>
   var AD_PAGE_NAME = "COUNSELLER"; //设置页面对应的名字
