--- a/views/yimin_index.html
+++ b/views/yimin_index.html
@@ -21,7 +21,7 @@
       <a href="#country1"><img src="{{helper.cdnhost}}/assets/img/America.png" alt="美国移民"><p>美国</p></a>
       <a href="#country3"><img src="{{helper.cdnhost}}/assets/img/Canada.png" alt="加拿大移民"><p>加拿大</p></a>
       <a href="#country4"><img src="{{helper.cdnhost}}/assets/img/Australia.png" alt="澳大利亚移民"><p>澳大利亚</p></a>
-      <a href="#country5"><img src="{{helper.cdnhost}}/assets/img/NEW ZEALAND.png" alt="新西兰移民"><p>新西兰</p></a>
+      <a href="#country5"><img src="{{helper.cdnhost}}/assets/img/NEW_ZEALAND.png" alt="新西兰移民"><p>新西兰</p></a>
       <a href="#country2"><img src="{{helper.cdnhost}}/assets/img/England.png" alt="英国移民"><p>英国</p></a>
       <a href="#country108"><img src="{{helper.cdnhost}}/assets/img/eire.png" alt="爱尔兰移民"><p>爱尔兰</p></a>
       <a href="#country7"><img src="{{helper.cdnhost}}/assets/img/Greece.png" alt="希腊移民"><p>希腊</p></a>
