--- a/views/header_new.html
+++ b/views/header_new.html
@@ -1,4 +1,11 @@
-
+<head>
+  <script type='text/javascript'>
+    !function(e,t,n,g,i){e[i]=e[i]||function(){(e[i].q=e[i].q||[]).push(arguments)},n=t.createElement("script"),tag=t.getElementsByTagName("script")[0],n.async=1,n.src=('https:'==document.location.protocol?'https://':'http://')+g,tag.parentNode.insertBefore(n,tag)}(window,document,"script","assets.growingio.com/2.1/gio.js","gio");
+    gio('init', '83721de227b2a72b', {});
+    //custom page code begin here
+    //custom page code end here
+    gio('send');
+  </script>
   <meta charset="UTF-8">
   <title>{{helper.pageTDK('title', tdk)}}</title>
   <link rel="shortcut icon" href="/favicon.ico">
@@ -26,6 +33,7 @@
   <script  src="{{helper.cdnhost}}/assets/js/common/common_pro.js"></script>
   {% endif %}
   <script src="{{helper.cdnhost}}/assets/js/common/common_base2.js"></script>
+</head>
   <div style="display: none">
     <input type="hidden" id="pagekey" value="{{tdk.pagekey}}">
     <input type="hidden" id="page_cityid" value="{{tdk.cityid}}">
