--- a/views/login/binding.html
+++ b/views/login/binding.html
@@ -39,7 +39,7 @@
         <form class="m-t register_nei_form" role="form" style="margin-top: 100px">
           <div class="form-group clearfix" style="position: relative;height: 28px">
             <div class="title"><span>*&nbsp;</span>手&nbsp;机&nbsp;号&nbsp;：</div>
-            <input type="text" class="form-control" id="newEmail" required data-vaild="^1[3|4|5|7|8]\d{9}$" data-errmsg="手机号不正确" />
+            <input type="text" class="form-control" id="newEmail" required data-vaild="^1\d{10}$" data-errmsg="手机号不正确" />
             <div class="ti">请输入手机号</div>
           </div>
           <div class="form-group clearfix" style="margin-left: -20px;">
@@ -153,7 +153,7 @@
       $('#newEmail').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '请输入手机号码').popover({"trigger":"manual"}).popover("show");
       return
     }
-    if (!/^1[3|4|5|7|8]\d{9}$/.test($("#newEmail").val())) {
+    if (!/^1\d{10}$/.test($("#newEmail").val())) {
 //            let butp = document.getElementById('phone')
       $('#newEmail').parent().addClass("has-error").removeClass("has-success");
       $('#newEmail').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '请输入正确手机号码').popover({"trigger":"manual"}).popover("show");
@@ -204,7 +204,7 @@
       $('#newEmail').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '请输入手机号码').popover({"trigger":"manual"}).popover("show");
       return
     }
-    if (!/^1[3|4|5|7|8]\d{9}$/.test($("#newEmail").val())) {
+    if (!/^1\d{10}$/.test($("#newEmail").val())) {
 //            let butp = document.getElementById('phone')
       $('#newEmail').parent().addClass("has-error").removeClass("has-success");
       $('#newEmail').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '请输入正确手机号码').popover({"trigger":"manual"}).popover("show");
