--- a/views/adviser_case_p.html
+++ b/views/adviser_case_p.html
@@ -27,6 +27,7 @@
     }
 </style>
 <body style="background: #f5f5f5">
+{% include "widget/common_hide/common_hide.html"%}
 {% include "widget/top/top.html" %}
 {% import "widget/new_nav_first/common_nav.html" as common_nav %}
 {{ common_nav.common_nav(tdk,helper) }}
