--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/article_detail.css" >
 </head>
 <body style="background:#f5f5f5;">
+{% include "widget/common_hide/common_hide.html"%}
 <!--页面标题导航条-->
 {% include "widget/detail_bar/detail_bar.html" %}
   <!-- ===头部=== -->
