--- a/views/share.html
+++ b/views/share.html
@@ -5,6 +5,7 @@
 	<title>{{title}}</title>
 </head>
 <body>
+{% include "widget/common_hide/common_hide.html"%}
 	<div class="bdsharebuttonbox" data-url="{{url}}">
       <a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>
       <a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a>
