--- a/views/yimin_index.html
+++ b/views/yimin_index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<head>
 {% include "header_new.html" %}
 <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/logo.css" >
 <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/index.css">
@@ -13,7 +14,9 @@
     margin: 10px 0px 25px 87px;
   }
 </style>
+</head>
 <body>
+{% include "widget/common_hide/common_hide.html"%}
 <!--留学国家-->
 <div class="nationality_guoqi_warp">
   <div class="nationality_guoqi">
