--- a/views/about/canzan.html
+++ b/views/about/canzan.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
 {% include "header_new.html" %}
 
 <style>
@@ -30,7 +31,9 @@
   }
 
 </style>
+</head>
 <body style="background: #ffffff">
+{% include "widget/common_hide/common_hide.html"%}
 {# 大学排名 #}
 {# 头部导航 #}
 {% include "widget/top/top.html" %}
