--- a/views/about/contact.html
+++ b/views/about/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
 {% include "header_new.html" %}
 <!--<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/nav.css" >
 <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/nav_ninth.css" >
@@ -39,7 +40,9 @@
     z-index: 500;
   }
 </style>
+</head>
 <body style="background: #f5f5f5;">
+{% include "widget/common_hide/common_hide.html"%}
 {% include "widget/top/top.html" %}
 
 {% import "widget/new_nav_first/common_nav.html" as common_nav %}
