--- a/views/about/cooperation.html
+++ b/views/about/cooperation.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
 {% include "header_new.html" %}
 <!--
 <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/nav.css" >
@@ -34,7 +35,9 @@
 }
 
 </style>
+</head>
 <body style="background: #f5f5f5;">
+{% include "widget/common_hide/common_hide.html"%}
 {% include "widget/top/top.html" %}
 
 {% import "widget/new_nav_first/common_nav.html" as common_nav %}
