--- a/views/about/employment.html
+++ b/views/about/employment.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
 {% include "header_new.html" %}
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <style>
@@ -132,7 +133,9 @@
 }
 
 </style>
+</head>
 <body style="background: #f5f5f5;">
+{% include "widget/common_hide/common_hide.html"%}
 {% include "widget/top/top.html" %}
 
 {% import "widget/new_nav_first/common_nav.html" as common_nav %}
