--- a/views/adviser_hot.html
+++ b/views/adviser_hot.html
@@ -7,6 +7,7 @@
   <script src="{{helper.cdnhost}}/dep/js/idangerous.swiper-2.7.6.js"></script>
 </head>
 <body style="background: #f5f5f5">
+{% include "widget/common_hide/common_hide.html"%}
 {% include "widget/top/top.html" %}
 {% import "widget/new_nav_first/common_nav.html" as common_nav %}
 {{ common_nav.common_nav(tdk,helper) }}}
