--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -20,6 +20,7 @@
   </style>
 </head>
 <body style="background: #f5f5f5">
+{% include "widget/common_hide/common_hide.html"%}
 {% include "widget/top/top.html" %}
 {% import "widget/new_nav_first/common_nav.html" as common_nav %}
 {{ common_nav.common_nav(tdk,helper) }}
