--- a/views/advisor_acount.html
+++ b/views/advisor_acount.html
@@ -78,7 +78,7 @@
   </style>
 </head>
 <body style="background: #f5f5f5">
-
+{% include "widget/common_hide/common_hide.html"%}
 {% include "widget/top/top.html" %}
 
 {% import "widget/new_nav_first/common_nav.html" as common_nav %}
