--- a/views/advisor_profile.html
+++ b/views/advisor_profile.html
@@ -94,7 +94,7 @@
 </style>
 </head>
 <body style="background: #f5f5f5">
-
+{% include "widget/common_hide/common_hide.html"%}
 {% include "widget/top/top.html" %}
 
 {% import "widget/new_nav_first/common_nav.html" as common_nav %}
