--- a/views/center_article_detail.html
+++ b/views/center_article_detail.html
@@ -8,6 +8,7 @@
   <![endif]-->
 </head>
 <body style="background:#f5f5f5;">
+{% include "widget/common_hide/common_hide.html"%}
   <!-- ===头部=== -->
  {% include "widget/top/top.html" %}
  <!-- ====导航===== -->
