--- a/views/center_case.html
+++ b/views/center_case.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<head>
 {% include "header_new.html" %}
 <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget2/bottom_comment.css"/>
 <style>
@@ -76,7 +77,9 @@
       margin-top: -33px
     }
 </style>
+</head>
 <body style="background: #f5f5f5">
+{% include "widget/common_hide/common_hide.html"%}
   {% include "widget/top/top.html" %}
   {% import "widget/new_nav_first/common_nav.html" as common_nav %}
   {{ common_nav.common_nav(tdk,helper) }}
