--- a/views/center_photo.html
+++ b/views/center_photo.html
@@ -38,6 +38,7 @@
 </style>
 </head>
 <body style="background: #f5f5f5">
+{% include "widget/common_hide/common_hide.html"%}
   <div id="photoDialog" style="display: none;"><!---->
     <!--确认pop-->
     <div class="dialog-cont" id="dialog-cont" style="display: none;">
