--- a/views/community_index.html
+++ b/views/community_index.html
@@ -131,6 +131,7 @@
   </style>
 </head>
 <body style="background: #f5f5f5">
+{% include "widget/common_hide/common_hide.html"%}
 {% include "widget/top/top.html" %}
 {% import "widget/nav_seventh/nav_seventh.html" as nav_seventh %}
 {{ nav_seventh.nav_seventh(route,tdk.cityid,helper) }}
