--- a/views/counsellor_personal.html
+++ b/views/counsellor_personal.html
@@ -77,7 +77,7 @@
 </style>
 </head>
 <body style="background: #f5f5f5">
-
+{% include "widget/common_hide/common_hide.html"%}
 {% include "widget/top/top.html" %}
 
 {% import "widget/nav_seventh/nav_seventh.html" as nav_seventh %}
