--- a/views/country_list.html
+++ b/views/country_list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<head>
 {% include "header_new.html" %}
 <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/search_result.css"/>
 <style>
@@ -46,7 +47,9 @@
       padding-top: 16px;
     }
 </style>
+</head>
 <body style="background: #f5f5f5">
+{% include "widget/common_hide/common_hide.html"%}
 {% include "widget/top/top.html" %}
 {% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
 {{ new_nav_red.new_nav_red(tdk,helper) }}
