--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<head>
 {% include "header_new.html" %}
 <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/logo.css" >
 <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/index.css">
@@ -10,7 +11,9 @@
     margin-right: 0;
   }
 </style>
+</head>
 <body>
+{% include "widget/common_hide/common_hide.html"%}
 <div class="zhezhao" id="zhezhaox" style="display: none">
 </div>
 <div id="zhezhaos" style="position: fixed;left: 50%; margin-left: -350px;z-index: 1000000;top: 50%;margin-top: -215px;display: none;">
