--- a/views/index_demo.html
+++ b/views/index_demo.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<head>
 {% include "header_new.html" %}
 <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/logo.css" >
 <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/index.css">
@@ -10,7 +11,9 @@
     margin-right: 0;
   }
 </style>
+</head>
 <body>
+{% include "widget/common_hide/common_hide.html"%}
 {% if iparea %}
 {% else %}
 <div class="zhezhao" id="zhezhaox">
