--- a/views/login/loginUser.html
+++ b/views/login/loginUser.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<head>
 {% include "header_new.html" %}
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/nav_login.css"/>
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/custom.css"/>
@@ -30,8 +31,9 @@
     }
     
   </style>
-
+</head>
 <body>
+{% include "widget/common_hide/common_hide.html"%}
   {% include "widget/top/top.html" %}
 
   <div class="main" style="margin: 0 auto;">
