--- a/views/login/register.html
+++ b/views/login/register.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<head>
 {% include "header_new.html" %}
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/top.css"/>
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/nav_login.css"/>
@@ -36,8 +37,9 @@
       cursor:pointer;
     }
   </style>
-
+</head>
 <body>
+{% include "widget/common_hide/common_hide.html"%}
   {% include "widget/top/top.html" %}
   {% include "widget/nav_login/nav_login.html" %}
 
