--- a/views/so_article.html
+++ b/views/so_article.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<head>
 {% include "header_new.html" %}
 <link rel="stylesheet" href="{{helper.cdnhost}}/dep/css/idangerous.swiper-2.7.6.css" >
 <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/search_result.css"/>
@@ -32,7 +33,9 @@
         margin-top: -33px
     }
 </style>
+</head>
 <body style="background: #f5f5f5">
+{% include "widget/common_hide/common_hide.html"%}
 {% include "widget/top/top.html" %}
 {% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
 {{ new_nav_red.new_nav_red(tdk,helper) }}
